# LNG_RL_OP

./: LNG_RL_OPTIMIZER_PLAN.md
lng_rl_optimizer/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
lng_rl_optimizer/config/: terminal.yaml
lng_rl_optimizer/docs/: macbook_m3_setup.md
lng_rl_optimizer/scripts/: check_env.py  download_nordpool_data.py  evaluate_agent.py  generate_surrogate_data.py  generate_synthetic_nordpool_data.py  run_ablation.py  train_agent.py  train_price_forecaster.py  train_surrogate.py
lng_rl_optimizer/src/agent/: baseline_agents.py  ppo_agent.py  safe_ppo.py
lng_rl_optimizer/src/environment/: action_space.py  lng_terminal_env.py  reward.py  safety_layer.py  state_space.py
lng_rl_optimizer/src/eval/: ablation.py  metrics.py  visualizer.py
lng_rl_optimizer/src/market/: carbon_price.py  nordpool_fetcher.py  price_forecaster.py
lng_rl_optimizer/src/physics/: bog_model.py  compressor_model.py  pump_model.py  terminal_simulator.py  thermodynamics.py  vaporizer_model.py
lng_rl_optimizer/src/surrogate/: data_generator.py  pinn.py  trainer.py  validator.py
lng_rl_optimizer/src/utils/: __init__.py  device.py
lng_rl_optimizer/tests/: test_bog_model.py  test_environment.py  test_pinn.py  test_reward.py  test_thermodynamics.py
